Fix footer overlap

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,3 +23,15 @@ main {
   margin: 0 auto;
   padding: 0 50px;
 }
+
+header {
+  position: sticky;
+  top: 0;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
